# GoPIC

./: .gitignore  README.md
.agents/: AGENTS.md
.agents/summaries/: conversation_2026_06_24.md
C/: collisions.h  constants.h  eduPIC  eduPIC.cc  io_manager.h  null_collision.h  performance_counter_compare.txt  simulation.h  state.h
C/parallel-hybrid/: constants.h  eduPIC.cc  io_manager.h  poisson.h  simulation.h  state.h
C/parallel-only-omp/: collisions.h  null_collision.h  poisson.h  simulation.h  state.h
C/sequential/: CMakeLists.txt  collisions.h  constants.h  cross_sections.h  null_collision.h
C/sequential/tests/: run_regression.sh  test_boundaries.cc  test_helpers.h  test_null_collision.cc  test_poisson.cc  test_push.cc
C/tests/: Makefile  compare_numeric.py  run_tests  test_cross_sections.cc  test_density.cc  test_regression_runner.cc
Go/: main.go
Go/matrix_version/: go.mod
Go/native_version/: GoPIC  collisions.go  constants.go  cross_sections.go  go.mod  io_manager.go  main.go  poisson.go  run.go  simulation.go  state.go
Go/parallel_chunking/: collisions.go  constants.go  cross_sections.go  io_manager.go  poisson.go  simulation.go  simulation_null.go  simulation_standard.go  (+1 more)
Python/: main.py  pyproject.toml
Python/src/config/: config.py  models.py
Python/src/core/: collisions.py  cross_sections.py  engine.py  solver.py  state.py
Python/src/utils/: diagnostics.py  io.py
docs/: parallel_implementation_hybrid.md  parallel_implementation_omp.md
null-collision/: IMPLEMENTATION_PLAN.md
plots/: measurements.ipynb
python/: pyproject.toml  report.html
(+153 files in other folders)
