[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oliwier Kniazewski", email = "87729500+Einhartd@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python = "python:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
