[project]
name = "gopic"
version = "0.1.0"
description = "GoPIC - educational 1d3v PIC/MCC simulation code"
readme = "README.md"
authors = [
    { name = "Oliwier Kniazewski", email = "87729500+Einhartd@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
gopic = "python.main:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
